Added ot-container index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
 <button class="ot-open-webform" id="ot-9976e0a7-8f5a-42dc-9e82-0e938583b03d">Open Web Form</button>
 
+  <div id="ot-container">
+    Show the form here...
+
+  </div>
+
 
   <script>
     // Check for Notification API support
